added config editor
